# api-eigen-example

./: .buildinfo  .catalog-info.yaml  .codespellrc  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .vale.ini  404.html  AUTHORS  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js  sg_execution_times.html
.github/: ci.yml  dependabot.yml
.github/workflows/: ci.yml  docker-images.yml  nightly-doc-build.yml  package_cleanup.yml
_downloads/65db023eee84efeb3c8ca2f8f650f35d/: python_rest_demo.py
_downloads/967b100e19dcb771aaca8aa0990f760c/: python_grpc_demo.ipynb
_downloads/da418b3c443c182c6d8a6f6cae4a7a61/: python_rest_demo.ipynb
_downloads/dad6ac4f52d725b760de848f4f0b44da/: python_grpc_demo.py
_modules/: index.html
_sources/: contributing.rst.txt  index.rst.txt  sg_execution_times.rst.txt
_sources/api/: index.rst.txt
_sources/docker/: index.rst.txt
_sources/examples/: index.rst.txt
_sources/getting_started/: index.rst.txt
_sources/users_guide/: index.rst.txt
_static/: search.json
api/: index.html
api/cpp-grpc/: client.html  index.html  server.html  service.html
api/cpp-rest/: client.html  eigen.html  index.html  restdb.html  server.html
api/python-grpc/: client.html  index.html  server.html
api/python-rest/: client.html  index.html  restdb.html  server.html
benchmark/: .gitignore  CMakeLists.txt  README.md  conanfile.txt  index.html  publish_results.sh  render_templates.py  requirements.txt  run_tests.sh
benchmark/bindings/cpp-clients/: CMakeLists.txt  setup.py
benchmark/cpp/: Makefile  README.md  publish_results.sh  render_templates.py  requirements.txt  run_tests.sh
benchmark/cpp/results/: README.md
benchmark/cpp/results/examples/centos_bare_metal/: delay_1ms.csv  threaded_client.csv
benchmark/cpp/results/examples/ubuntu_bare_metal/: compressionlevel_3_rate_100mbit.csv  delay_1ms.csv  rate_100mbit.csv  sync.csv
benchmark/cpp/results/examples/wsl2_on_windows/: sync.csv
benchmark/cpp/runner/: run_constrained.py  run_measurements.py
benchmark/cpp/src/client/: .gitignore  measure_memcpy.cpp  measurelib.hpp  sync_client.cpp.in
benchmark/cpp/src/common/: CMakeLists.txt  types_lookup.hpp.in
benchmark/cpp/src/protos/: .gitignore
benchmark/cpp/src/server/: .gitignore  sync_server.cpp.in
benchmark/cpp/tests/: test_grpc.py  test_grpc_cpp.py  test_rest_cpp.py  test_tools.py
benchmark/data/: .gitignore  process_data.py
benchmark/generated_src/: CMakeLists.txt
benchmark/python/: README.md  publish_results.sh  run_tests.sh
benchmark/python/results/: README.md
benchmark/python/tests/: test_grpc.py  test_grpc_python.py  test_rest.py  test_rest_python.py  test_tools.py
benchmark/results/: .gitignore  README.md  analyze_results.ipynb
benchmark/results/examples/centos_bare_metal/: memcpy.csv  rate_100mbit.csv  sync.csv
benchmark/results/examples/ubuntu_bare_metal/: memcpy.csv  threaded_client.csv
benchmark/results/examples/wsl2_on_windows/: memcpy.csv  threaded_client.csv
benchmark/runner/: run_constrained.py  run_measurements.py
benchmark/src/: .gitignore
benchmark/src/client/: CMakeLists.txt  clientlib.hpp  sync_client_fixed_chunksize.cpp.in
benchmark/src/protos/: send_array.proto.in
benchmark/src/server/: CMakeLists.txt  serverlib.hpp
benchmark/tests/: test_grpc_cpp.py  test_rest_cpp.py  test_tools.py
benchmark/tests/cpp/: CMakeLists.txt
benchmark/tests/cpp/src/: add_matrices_grpc.cpp  add_matrices_rest.cpp  add_vectors_grpc.cpp  add_vectors_rest.cpp  multiply_matrices_grpc.cpp  multiply_matrices_rest.cpp  multiply_vectors_grpc.cpp  multiply_vectors_rest.cpp
benchmark/tests/python/: test_grpc_python.py  test_rest_python.py  test_tools.py
cpp/: Makefile
demo/: CMakeLists.txt  Makefile
demo/generated_src/: CMakeLists.txt
doc/: Makefile
doc/source/: conf.py  contributing.rst  index.rst
doc/styles/: .gitignore
docker/: README.md  index.html
docker/cpp-grpc/: docker-compose.yml
docker/cpp-grpc-client/: Dockerfile  demo.ipynb
docker/cpp-grpc-server/: Dockerfile
docker/cpp-rest/: docker-compose.yml
docker/cpp-rest-client/: Dockerfile  demo.ipynb
docker/cpp-rest-server/: Dockerfile
docker/python-grpc/: docker-compose.yml
docker/python-grpc-client/: Dockerfile  demo.ipynb
docker/python-grpc-server/: Dockerfile
docker/python-rest-client/: Dockerfile  demo.ipynb
examples/: README.rst  index.html  sg_execution_times.html
getting_started/: index.html
protos/: chunkdemo.proto  grpcdemo.proto
python/: client.py
python/eigen-wrapper/: CMakeLists.txt  setup.py  test_eigen_wrapper.py
python/grpc/: Makefile  (+4 more)
requirements/: requirements_build.txt  requirements_docs.txt  requirements_eigen_wrapper.txt
src/ansys/eigen/cpp/eigen-wrapper/: .gitignore  CMakeLists.txt  setup.py
src/ansys/eigen/cpp/eigen-wrapper/src/: main.cpp
src/ansys/eigen/cpp/grpc/client/: .gitignore  CMakeLists.txt  Makefile  conanfile.txt  deploy_dependencies.sh  requirements.txt
src/ansys/eigen/cpp/grpc/client/docs/: Doxyfile
src/ansys/eigen/cpp/grpc/client/src/: GRPCClient.cpp  GRPCClient.hpp  main.cpp
src/ansys/eigen/cpp/grpc/server/: CMakeLists.txt  Makefile  conanfile.txt  deploy_dependencies.sh
src/ansys/eigen/cpp/grpc/server/docs/: Doxyfile
src/ansys/eigen/cpp/grpc/server/src/: GRPCServer.cpp  GRPCServer.hpp  GRPCService.cpp  GRPCService.hpp  main.cpp
src/ansys/eigen/cpp/rest/client/: .gitignore  CMakeLists.txt
src/ansys/eigen/cpp/rest/client/docs/: Doxyfile
src/ansys/eigen/cpp/rest/client/src/: EigenClient.cpp  EigenClient.hpp  main.cpp
src/ansys/eigen/cpp/rest/server/: .gitignore  CMakeLists.txt  conanfile.txt
src/ansys/eigen/cpp/rest/server/docs/: Doxyfile
src/ansys/eigen/cpp/rest/server/src/: EigenFunctionalities.cpp  EigenFunctionalities.hpp  RestDb.cpp  RestDb.hpp  RestServer.cpp  RestServer.hpp  main.cpp
tests/: test_eigen_wrapper.py  test_grpc.py  test_rest_client.py  test_rest_server.py
users_guide/: index.html
(+98 files in other folders)
