[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "api-eigen-example"
version = "0.0.1"
description = "A demo project for showing different protocol communications (API REST, gRPC) both in Python and C++."
authors = [{name = "Alexander Kaszynski", email = "alexander.kaszynski@ansys.com"}, {name = "Roberto Pastor Muela", email = "roberto.pastormuela@ansys.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]

[project.urls]
Home = "https://github.com/ansys/api-eigen-example"

[tool.flit.module]
name = "ansys"